--- a/index.html
+++ b/index.html
@@ -1,17 +1,63 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cronômetro Regressivo</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@300&family=Red+Hat+Text:ital,wght@1,700&display=swap" rel="stylesheet">
 </head>
+
 <body>
-  <span class="days"></span>
-  <span class="hours"></span>
-  <span class="minutes"></span>
-  <span class="seconds"></span>
-  
+  <div class="countdown">
+    <span class="days time-elem">
+      <span class="top">0</span>
+      <span class="top-back">
+        <span>0</span>
+      </span>
+      <span class="bottom">0</span>
+      <span class="bottom-back">
+        <span>0</span>
+      </span>
+    </span>    
+
+    <span class="hours time-elem">
+      <span class="top">0</span>
+      <span class="top-back">
+        <span>0</span>
+      </span>
+      <span class="bottom">0</span>
+      <span class="bottom-back">
+        <span>0</span>
+      </span>
+    </span> 
+
+    <span class="minutes time-elem">
+      <span class="top">0</span>
+      <span class="top-back">
+        <span>0</span>
+      </span>
+      <span class="bottom">0</span>
+      <span class="bottom-back">
+        <span>0</span>
+      </span>
+    </span> 
+
+    <span class="seconds time-elem">
+      <span class="top">0</span>
+      <span class="top-back">
+        <span>0</span>
+      </span>
+      <span class="bottom">0</span>
+      <span class="bottom-back">
+        <span>0</span>
+      </span>
+    </span> 
+  </div>
+
   <script src="assets/js/script.js"></script>
 </body>
 </html>
