--- a/index.html
+++ b/index.html
@@ -9,55 +9,59 @@
   <link rel="stylesheet" href="assets/scss/bundle.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@300&family=Red+Hat+Text:ital,wght@1,700&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@300&family=Red+Hat+Text:ital,wght@1,700&display=swap"
+    rel="stylesheet">
 </head>
 
 <body>
-  <div class="countdown">
-    <span class="days time-elem">
-      <span class="top">0</span>
-      <span class="top-back">
-        <span>0</span>
+  <main>
+    <div class="countdown">
+      <span class="days time-elem">
+        <span class="top">0</span>
+        <span class="top-back">
+          <span>0</span>
+        </span>
+        <span class="bottom">0</span>
+        <span class="bottom-back">
+          <span>0</span>
+        </span>
       </span>
-      <span class="bottom">0</span>
-      <span class="bottom-back">
-        <span>0</span>
-      </span>
-    </span>    
 
-    <span class="hours time-elem">
-      <span class="top">0</span>
-      <span class="top-back">
-        <span>0</span>
+      <span class="hours time-elem">
+        <span class="top">0</span>
+        <span class="top-back">
+          <span>0</span>
+        </span>
+        <span class="bottom">0</span>
+        <span class="bottom-back">
+          <span>0</span>
+        </span>
       </span>
-      <span class="bottom">0</span>
-      <span class="bottom-back">
-        <span>0</span>
-      </span>
-    </span> 
 
-    <span class="minutes time-elem">
-      <span class="top">0</span>
-      <span class="top-back">
-        <span>0</span>
+      <span class="minutes time-elem">
+        <span class="top">0</span>
+        <span class="top-back">
+          <span>0</span>
+        </span>
+        <span class="bottom">0</span>
+        <span class="bottom-back">
+          <span>0</span>
+        </span>
       </span>
-      <span class="bottom">0</span>
-      <span class="bottom-back">
-        <span>0</span>
-      </span>
-    </span> 
 
-    <span class="seconds time-elem">
-      <span class="top">0</span>
-      <span class="top-back">
-        <span>0</span>
+      <span class="seconds time-elem">
+        <span class="top">0</span>
+        <span class="top-back">
+          <span>0</span>
+        </span>
+        <span class="bottom">0</span>
+        <span class="bottom-back">
+          <span>0</span>
+        </span>
       </span>
-      <span class="bottom">0</span>
-      <span class="bottom-back">
-        <span>0</span>
-      </span>
-    </span> 
-  </div>
+    </div>
+  </main>
 
   <script src="assets/js/script.js"></script>
 </body>
