--- a/index.html
+++ b/index.html
@@ -65,5 +65,6 @@
   </main>
 
   <script src="assets/js/script.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.0/gsap.min.js"></script>
 </body>
 </html>
