--- a/index.html
+++ b/index.html
@@ -62,6 +62,11 @@
         </span>
       </span>
     </div>
+    <div class="social-media">
+      <img src="assets/img/icon-facebook.svg" alt="icon-facebook">
+      <img src="assets/img/icon-instagram.svg" alt="icon-instagram">
+      <img src="assets/img/icon-pinterest.svg" alt="icon-pinterest">
+    </div>
   </main>
 
   <script src="assets/js/script.js"></script>
